# python-user-authn

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml
user_authn/: __main__.py  auth_server.py
user_authn/data/engineering/: architecture.md
user_authn/data/finance/: salaries.md
